--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,12 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+
+# Non-default stuff
+*.json
+*.xml
+*.md
+
 # User-specific files
 *.suo
 *.user
@@ -56,7 +62,6 @@ artifacts/
 
 # StyleCop
 StyleCopReport.xml
-*.xml
 
 # Files built by Visual Studio
 *_i.c
